adding social icons

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             <dt>name</dt>
                             <dd><input name="petName"/></dd>
 
-                            <dt>page</dt>
-                            <dd><input name="pageAge"/></dd>
+                            <dt>age</dt>
+                            <dd><input name="petAge"/></dd>
 
                             <dt>gender</dt>
                             <dd><input name="petGender"/></dd>
@@ -140,6 +140,18 @@
             </div>
 
         </div>
+    </div>
+
+    <div class="footer">
+        <a href="http://www.facebook.com/barkground" target="_blank">
+            <img src="images/fb-logo.png" class="social-icon" alt="facebook-link" />
+        </a>
+        &nbsp;&nbsp;&nbsp;
+        <a href="http://www.twitter.com/BarkGround " target="_blank">
+            <img src="images/twitter-logo.png" class="social-icon" alt="twitter-link" />
+        </a>
+        <br/>
+        &copy; 2014 Barkground
     </div>
 
 </div>
