--- a/index.html
+++ b/index.html
@@ -154,6 +154,28 @@
         &copy; 2014 Barkground
     </div>
 
+    <div class="modal fade" id="js-thx-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h2 class="modal-title title">Thanks</h2>
+                </div>
+                <div class="modal-body">
+                    <p>
+                        Thank you for requesting your BarkGround Check. We will contact you within 24 hours to complete the process.
+                    </p>
+                    <p>
+                        If you have questions before you hear from us, please do not hesitate to contact us at <a href="mailto:Info@BarkGround.com">Info@BarkGround.com</a>
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
