--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <![endif]-->
         <img class="logo animate" src="images/logo-header.png" alt="BackGround"/>
         <a href="#barkground-form" class="pull-right request-button animate" id="js-go-to-form">
-            Join Us
+            Learn More
         </a>
     </div>
 
@@ -49,22 +49,13 @@
         <div class="get-your-check content-section">
 
 
-            <h2 class="title">Join Us</h2>
+            <h2 class="title">Stay informed about our launch</h2>
             <hr/>
 
-            <h3 class="subtitle">to stay informed about our launch</h3>
+            <!--<h3 class="subtitle"></h3>-->
 
             <p class="promo-2">
                 Landlords can also add their dog-friendly rentals to our database of available properties for free by using the form at the bottom of the page.
-            </p>
-
-            <p class="promo-3">
-                Please provide us with some simple information so that we can get your BarkGround Check started.
-            </p>
-
-            <p class="promo-4">
-                We will only use this information to process your requests. We will NEVER sell, share, or distribute
-                your personal information without your consent.
             </p>
 
 
@@ -72,7 +63,7 @@
 
                 <div>
                     <fieldset class="form-section">
-                        <legend>Information about you:</legend>
+                        <!--<legend>Information about you:</legend>-->
                         <dl class="dl-horizontal">
                             <dt>first name</dt>
                             <dd><input name="firstName" type="text"/></dd>
@@ -80,13 +71,38 @@
                             <dt>last name</dt>
                             <dd><input name="lastName" type="text"/></dd>
 
-                            <dt>phone</dt>
-                            <dd><input name="phone" type="text"/></dd>
-
                             <dt>email</dt>
                             <dd><input name="email" type="email"/></dd>
+
+                            <dt></dt>
+                            <dd></dd>
                         </dl>
                     </fieldset>
+
+                    <br/>
+                    <fieldset class="form-section">
+                        <legend>Are you a landlord? Please share some information about your rental property</legend>
+                        <dl class="dl-horizontal">
+                            <dt>address</dt>
+                            <dd><input name="propertyAddress" type="text"></dd>
+
+                            <dt>zip code</dt>
+                            <dd><input name="propertyZip" type="text"></dd>
+
+                            <dt>management</dt>
+                            <dd><input name="propertyManagementCompany" type="text"></dd>
+
+                            <dt>building name</dt>
+                            <dd><input name="propertyBuildingName" type="text"></dd>
+
+                            <dt>phone</dt>
+                            <dd><input name="propertyPhone" type="text"></dd>
+
+                            <dt>website</dt>
+                            <dd><input name="propertyWebsite" type="text"></dd>
+                        </dl>
+                    </fieldset>
+
 
                     <input name="mysteryField" type="text" class="hidden"/>
                     <div class="clearfix"></div>
@@ -95,8 +111,7 @@
             </form>
 
             <p class="from-disclaimer">
-                By submitting this form, you agree that we may contact you by telephone, email, or other means for the
-                purpose of obtaining further information to complete your BarkGround Check.
+                By submitting this form, you agree that we may contact you by phone or email. We will never sell, share or distribute your personal information without your consent.
             </p>
 
             <div data-loading-text="Submitting your BarkGround request..." class="request-button" id="js-send-form">
@@ -127,11 +142,25 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                        Thank you for requesting your BarkGround Check. We will contact you within 24 hours to complete the process.
+                        Thank you for sharing your interest in our launch! Watch your Inbox for updates, and Like us on Facebook at <a href="https://www.facebook.com/BarkGround">www.facebook.com/BarkGround</a> for even more information and special offers.
                     </p>
+
                     <p>
-                        If you have questions before you hear from us, please do not hesitate to contact us at <a href="mailto:Info@BarkGround.com">Info@BarkGround.com</a>
+                        If you submitted information about your rental property, we will follow up with you to confirm some details and answer any questions you might have.
                     </p>
+
+                    <p>
+                        If you have questions before you hear from us, please do not hesitate to contact us at <a href="mailto:hello@BarkGround.com">hello@BarkGround.com</a>
+                    </p>
+
+                    <p>
+                        Thanks for showing your support!
+                    </p>
+
+                    <a href="http://www.BarkGround.com" style="display: block; text-align: center;">
+                        <img src="images/logo-header.png">
+                    </a>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
