more copy updates

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 
                     <br/>
                     <fieldset class="form-section">
-                        <legend>Are you a landlord? Please share some information about your rental property</legend>
+                        <legend>Are you a landlord?
+                            <p>Please share some information about your rental property</p>
+                        </legend>
+
                         <dl class="dl-horizontal">
                             <dt>address</dt>
                             <dd><input name="propertyAddress" type="text"></dd>
@@ -115,7 +118,7 @@
             </p>
 
             <div data-loading-text="Submitting your BarkGround request..." class="request-button" id="js-send-form">
-                Join Us
+                Stay Informed
             </div>
 
         </div>
